# nori-cli

./: .gitignore  AGENTS.md  APPLICATION-SPEC.md  CLAUDE.md  CLI_RESUME_SPEED.md  CURRENT-PROGRESS.md  IMPLEMENTATION_APPROVAL_RENDERING.md  PROGRESS.md  README.md  ROADMAP.md  docs.md  flake.nix  justfile  nori-releases.md  package-lock.json
codex-rs/acp/: Cargo.toml  HANDOFF.md  PLAN.md  docs.md
codex-rs/acp/src/: acp_client.rs  agent.rs  auto_worktree.rs  backend.rs  client_handler.rs  connection.rs  hooks.rs  lib.rs  message_history.rs  registry.rs  tracing_setup.rs  transcript_discovery.rs  translator.rs
codex-rs/acp/src/backend/: event_translation.rs  helpers.rs  hooks.rs  mod.rs  session.rs  session_reducer.rs  session_runtime_driver.rs  spawn_and_relay.rs  submit_and_ops.rs  tests.rs  tool_display.rs  transcript.rs  user_input.rs
codex-rs/acp/src/config/: loader.rs  mod.rs  types.rs
codex-rs/acp/src/connection/: client_delegate.rs  mcp.rs  mod.rs  public_api.rs  sacp_connection.rs  sacp_connection_tests.rs  tests.rs  worker.rs
codex-rs/acp/src/transcript/: loader.rs  mod.rs  recorder.rs  tests.rs  types.rs
codex-rs/acp/tests/: integration.rs  thin_slice.rs  tracing_test.rs  undo_test.rs
codex-rs/acp/tests/fixtures/: session-gemini.json
codex-rs/cli/: Cargo.toml  docs.md
codex-rs/cli/src/: main.rs  mcp_cmd.rs
codex-rs/cli/tests/: execpolicy.rs  mcp_add_remove.rs  mcp_list.rs
codex-rs/common/: Cargo.toml  docs.md
codex-rs/common/src/: config_override.rs  lib.rs  model_presets.rs  oss.rs
codex-rs/mock-acp-agent/: Cargo.toml  docs.md
codex-rs/mock-acp-agent/src/: main.rs  runaway_search.rs
codex-rs/nori-protocol/: Cargo.toml  docs.md
codex-rs/nori-protocol/src/: lib.rs  session_runtime.rs
codex-rs/tui/: Cargo.toml  config.toml  docs.md
codex-rs/tui-pty-e2e/: Cargo.toml  docs.md
codex-rs/tui-pty-e2e/src/: lib.rs
codex-rs/tui-pty-e2e/tests/: acp_file_operations.rs  acp_mcp_command.rs  acp_mode.rs  acp_prompt_errors.rs  acp_runaway_search.rs  acp_tool_calls.rs  agent_switching.rs  input_handling.rs  manual-test-cancellation.md  nori_footer.rs  prompt_flow.rs  startup.rs  streaming.rs  transcript_persistence.rs
codex-rs/tui-pty-e2e/tests/snapshots/: acp_file_operations__acp_file_write_success.snap  acp_mode__acp_mode_startup.snap  acp_tool_calls__acp_explored_after_assistant_message.snap  acp_tool_calls__acp_multi_call_exploring.snap  acp_tool_calls__acp_no_orphan_tool_cells.snap  acp_tool_calls__acp_tool_call_echo.snap  acp_tool_calls__acp_tool_call_no_duplicates.snap  acp_tool_calls__acp_tool_call_read.snap  acp_tool_calls__acp_tool_call_rendered.snap  acp_tool_calls__tool_call_completion.snap  exit_statistics__exit_message_slash_exit.snap  input_handling__ctrl_c_clears.snap  input_handling__history_navigation_multiple_messages.snap  input_handling__history_navigation_up_down.snap  input_handling__model_changed.snap  input_handling__typing_and_backspace.snap  nori_footer__full_footer.snap  prompt_flow__custom_response.snap  prompt_flow__http_model_immediate_error.snap  prompt_flow__missing_model.snap  prompt_flow__multiline_input.snap  prompt_flow__prompt_submitted.snap  startup__runs_in_temp_directory.snap  startup__startup_error_unregistered_model.snap  startup__startup_shows_nori_banner.snap  startup__startup_shows_welcome.snap  startup__startup_welcome_dimensions_10x120.snap  startup__startup_welcome_dimensions_40x120.snap  streaming__cancelled_stream.snap  streaming__submit_input.snap  transcript_persistence__transcript_viewonly_display.snap
codex-rs/tui/src/: app.rs  app_backtrack.rs  app_event.rs  chatwidget.rs  cli.rs  client_event_format.rs  client_tool_cell.rs  diff_render.rs  effective_cwd_tracker.rs  feedback_compat.rs  get_git_diff.rs  history_cell.rs  insert_history.rs  lib.rs  login_handler.rs  markdown.rs  markdown_render_tests.rs  markdown_stream.rs  pinned_plan_drawer.rs  slash_command.rs  status_indicator_widget.rs  system_info.rs  terminal_title.rs  tui.rs  viewonly_transcript.rs  wrapping.rs
codex-rs/tui/src/app/: config_persistence.rs  event_handling.rs  mod.rs  session_setup.rs  tests.rs
codex-rs/tui/src/bottom_pane/: approval_overlay.rs  bottom_pane_view.rs  chat_composer.rs  command_popup.rs  feedback_view.rs  file_search_popup.rs  footer.rs  list_selection_view.rs  mod.rs  selection_popup_common.rs
codex-rs/tui/src/chatwidget/: EXEC_CELL_LIFECYCLE.md  agent.rs  approvals.rs  constructors.rs  event_handlers.rs  helpers.rs  interrupts.rs  key_handling.rs  mod.rs  pending_exec_cells.rs  pickers.rs  session_header.rs  tests.rs  user_input.rs
codex-rs/tui/src/exec_cell/: model.rs  render.rs
codex-rs/tui/src/history_cell/: mod.rs  tests.rs
codex-rs/tui/src/nori/: agent_picker.rs  config_adapter.rs  config_picker.rs  docs.md  feedback.rs  hotkey_picker.rs  loop_count_picker.rs  mcp_server_picker.rs  mod.rs  session_header.rs  skillset_picker.rs  update_action.rs  update_prompt.rs  viewonly_session_picker.rs
codex-rs/tui/src/onboarding/: auth.rs  mod.rs  onboarding_screen.rs  trust_directory.rs  welcome.rs
codex-rs/tui/src/render/: highlight.rs  line_utils.rs
codex-rs/tui/src/resume_picker/: helpers.rs  mod.rs  rendering.rs  state.rs
codex-rs/tui/src/snapshots/: codex_tui__nori_session_header__tests__nori_header_snapshot.snap  nori_tui__status_indicator_widget__tests__renders_truncated.snap  nori_tui__status_indicator_widget__tests__renders_with_default_header.snap
codex-rs/tui/src/status/: mod.rs  rate_limits.rs  tests.rs
nori-rs/acp/: Cargo.toml  docs.md
nori-rs/acp/src/: hooks.rs  lib.rs  message_history.rs  registry.rs  session_parser.rs  tracing_setup.rs  transcript_discovery.rs  translator.rs  undo.rs
nori-rs/acp/src/backend/: helpers.rs  hooks.rs  mod.rs  (+4 more)
nori-rs/acp/tests/: session_parser_test.rs  tracing_test.rs  undo_test.rs
nori-rs/cli/: Cargo.toml  docs.md
nori-rs/cli/src/: lib.rs  main.rs
nori-rs/cli/tests/: nori_acp_crate.rs
nori-rs/installed/: Cargo.toml  docs.md
nori-rs/installed/src/: analytics.rs  lib.rs  state.rs
nori-rs/mock-acp-agent/: Cargo.toml  docs.md
(+587 files in other folders)
