[package]
name = "codex-acp"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
agent-client-protocol = "0.7"
anyhow = { workspace = true }
codex-protocol = { path = "../protocol" }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["compat"] }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }
tokio-test = { workspace = true }
which = { workspace = true }
