[package]
name = "codex-acp"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[features]
default = ["unstable"]
unstable = []

[lints]
workspace = true

[dependencies]
agent-client-protocol-schema = { version = "0.10.8", features = ["unstable"] }
anyhow = { workspace = true }
sacp = { workspace = true }
base64 = { workspace = true }
codex-core = { workspace = true }
codex-git = { workspace = true }
codex-rmcp-client = { workspace = true }
codex-protocol = { path = "../protocol" }
codex-utils-string = { workspace = true }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["compat"] }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
toml = { workspace = true }
dirs = { workspace = true }
diffy = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
sha2 = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
filetime = "0.2"
pretty_assertions = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }
tokio-test = { workspace = true }
which = { workspace = true }
