[package]
name = "nori-protocol"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

[dependencies]
sacp = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
