[package]
name = "nori-protocol"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

[dependencies]
agent-client-protocol-schema = { workspace = true, features = ["unstable"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
