[package]
name = "tui-pty-e2e"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
portable-pty = "0.8"
vt100 = "0.15"
insta = "1"
anyhow = "1"
tempfile = "3"
owo-colors = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
