[package]
name = "mock-acp-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "mock_acp_agent"
path = "src/main.rs"

[features]
default = ["unstable"]
# Enable unstable ACP features like model switching.
unstable = ["agent-client-protocol/unstable"]

[dependencies]
agent-client-protocol = "0.9.0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
async-trait = "0.1"
serde_json = "1.0"
env_logger = "0.11"
