[package]
name = "core_test_support"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "lib.rs"

[dependencies]
anyhow = { workspace = true }
assert_cmd = { workspace = true }
codex-core = { workspace = true }
notify = { workspace = true }
regex-lite = { workspace = true }
shlex = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["time"] }
walkdir = { workspace = true }
